--- a/src/main/resources/templates/cotizacionpasajes/create.html
+++ b/src/main/resources/templates/cotizacionpasajes/create.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cotización Pasajes</title>
-</head>
-<body>
-    <h1>Cotización pasajes</h1>
-    <p>Esta es la vista para la cotización de pasajes.</p>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="es">\n<head>\n    <meta charset="UTF-8">\n    <meta http-equiv="X-UA-Compatible" content="IE=edge">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Cotizacion de Pasajes</title>\n</head>\n<body>\n    <h1>Crear Cotizacion de Pasajes</h1>\n    <form action="/cotizacionpasajes" method="post">\n        <label for="nombre">Nombre del Pasajero:</label>\n        <input type="text" id="nombre" name="nombre" required/><br/>\n        <label for="origen">Origen:</label>\n        <input type="text" id="origen" name="origen" required/><br/>\n        <label for="destino">Destino:</label>\n        <input type="text" id="destino" name="destino" required/><br/>\n        <label for="fecha">Fecha de Viaje:</label>\n        <input type="date" id="fecha" name="fecha" required/><br/>\n        <label for="numeroPasajeros">Número de Pasajeros:</label>\n        <input type="number" id="numeroPasajeros" name="numeroPasajeros" required/><br/>\n        <button type="submit">Crear Cotizacion</button>\n    </form>\n</body>\n</html>
